Fix review form jump

--- a/src/App.css
+++ b/src/App.css
@@ -106,11 +106,10 @@ h4 {
 .rate {
     float: right;
     height: 46px;
-    /* padding: 0 10px; */
 }
 .rate:not(:checked) > input {
     position: absolute;
-    top: -9999px;
+    left: -9999px;
 }
 .rate:not(:checked) > label {
     float: right;
